tests/parser/should_fail/type_annotation_1.csp
p :: a -> b
p(x) = x
